sumo/tests/netconvert/errors/xml_no_edg/errors.netconvert.exe
Error: No edges loaded.
Quitting (conversion failed).
